<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:alwaysRetainTaskState="true"
    tools:context="mx.lxl.revisandoactivities.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombre"
        android:layout_marginTop="0dp"
        android:padding="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/input_label_nombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="0dp"
            android:padding="0dp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/input_label_fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelFechaNacimiento"
        android:layout_below="@+id/tilNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/dp"
        android:layout_width="match_parent"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/labelFechaNacimiento"
        android:paddingBottom="0dp"
        android:layout_height="150dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilTelefono"
        android:layout_below="@+id/dp"
        android:layout_marginTop="0dp"
        android:paddingTop="0dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/input_label_telefono"
            android:layout_margin="0dp"
            android:padding="0dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail"
        android:layout_below="@+id/tilTelefono"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/input_label_email"
            android:layout_margin="0dp"
            android:padding="0dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDescripcionContacto"
        android:layout_below="@+id/tilEmail"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/input_label_descripcion_contacto"
            android:layout_below="@+id/tilEmail"
            android:id="@+id/inputDescripcionContacto"
            android:layout_margin="0dp"
            android:padding="0dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/btn_label_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilDescripcionContacto"
        android:id="@+id/buttonSiguiente" />


</RelativeLayout>
